<resources>
    <string name="app_name">CapstoneAndroid</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_geofence">Geofence</string>
    <string name="title_logout">Logout</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_title">Title</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_location">Location</string>
    <string name="prompt_start_time">Start Time</string>
    <string name="prompt_end_time">End Time</string>
    <string name="prompt_attendee">Attendee</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="shared_preferences_key">"theKeyForCapstoneAndroid"</string>
    <string name="is_logged_in_key">"isLoggedIn</string>
    <string name="access_token">"accessToken"</string>
    <string name="msg_token_fmt">"msgToken"</string>
    <string name="notification_channel_description">"default_channel_description"</string>
    <string name="notification_channel_id">"default_channel_id"</string>
    <string name="notification_channel_name">"default_notification_channel_name"</string>
    <string name="notification_title">"notification_title"</string>
    <string name="fcm_token">"fcm_token_store"</string>
    <string name="user_email">email</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="edit">Edit</string>
    <string name="delete">delete</string>
    <string name="org_address">"org_address"</string>
    <string name="layout_update_notification">Update Notification</string>
    <string name="layout_notification_when_entering_gate">Notification when entering gate</string>
    <string name="layout_notification_when_exiting_gate">Notification when exiting gate</string>
    <string name="geofence_enter_store">geofence enter store</string>
    <string name="geofence_exit_store">geofence exit store</string>
    <string name="submit">SUBMIT</string>
</resources>
