<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/expand_reminder">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#38889c"
        android:gravity="top">
        <LinearLayout
            android:id="@+id/ll_expand_reminder_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="#38889c"
            android:padding="25dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/viewReminderTitle"
                android:text="@string/title"
                android:textStyle="bold"
                android:textSize="20dp">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/viewReminderDescription"
                android:text="@string/description">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/viewReminderStartTime"
                android:text="@string/start_time">

            </TextView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:id="@+id/reminder_edit_btn">

                </Button>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:id="@+id/reminder_delete_btn">

                </Button>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>