<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#38889c"
    >


    <Button
        android:id="@+id/updateNotificationButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/layout_update_notification"
        app:layout_constraintStart_toStartOf="@+id/exitText"
        app:layout_constraintTop_toBottomOf="@+id/exitText" />

    <EditText
        android:id="@+id/enterText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/layout_notification_when_entering_gate"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/exitText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/layout_notification_when_exiting_gate"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/enterText"
        app:layout_constraintStart_toStartOf="@+id/enterText"
        app:layout_constraintTop_toBottomOf="@+id/enterText" />
</androidx.constraintlayout.widget.ConstraintLayout>